// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a simple hello text 1`] = `
<div>
  <span>
    <p>
      Hello
    </p>
  </span>
</div>
`;

exports[`Render an emoji 1`] = `
<div>
  <span>
    <p>
      👩🏽‍🚒
    </p>
  </span>
</div>
`;

exports[`Render an emoji image based on the emoji string 1`] = `
<div>
  <span>
    <p>
      <span
        style="background-position: 37.2624703087886% 92.13182897862234%; background-size: 5362.5%; background-image: url(undefined); font-size: 1.5em; display: inline-block; vertical-align: middle; width: 1em; height: 1em;"
      />
    </p>
  </span>
</div>
`;
